# FastChat

./: .gitignore  Makefile  NOTES.md  pyproject.toml  setup.cfg
.github/workflows/: auto_release.yml  manual_release.yml  publish.yml
docs/: github_action.md  setup.cfg
fastchat/: app.py
fastchat/serve/: fake_worker.py
scripts/: convert_llama_weights_to_hf.py
