[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
local_scheme = "no-local-version"
write_to = "fastchat/version.py"

[project]
name = "ytchat"
# version = "0.0.14"
dynamic = ["version"]
description = "An open platform for training, serving, and evaluating large language model based chatbots."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "accelerate", "fastapi", "gradio==3.23", "markdown2[all]", "numpy",
    "prompt_toolkit>=3.0.0", "requests", "rich>=10.0.0", "sentencepiece",
    "shortuuid", "transformers>=4.28.0,<4.29.0", "tokenizers>=0.12.1", "torch",
    "uvicorn", "wandb", "httpx", "shortuuid", "pydantic", "nh3",
]

[project.optional-dependencies]
dev = ["black==23.3.0", "pylint==2.8.2"]

[project.urls]
"Homepage" = "https://github.com/yantao0527/fastchat"
"Bug Tracker" = "https://github.com/yantao0527/fastchat/issues"

[tool.setuptools.packages.find]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]

[tool.wheel]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]
