[metadata]
name = fschat
description = An open platform for training, serving, and evaluating large language model based chatbots.
long_description_content_type = text/markdown
url = https://github.com/lm-sys/FastChat
project_urls =
    Bug Tracker = https://github.com/lm-sys/FastChat/issues
    Changelog = https://github.com/lm-sys/FastChat/releases
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Intended Audience :: Developers

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.8

[options.packages.find]
where = .

[options.entry_points]
console_scripts =
    fastchat = fastchat.app:entry_point
